A much nicer fix for line breaks on skills

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -79,6 +79,6 @@ h4 {
     }
   }
 
-  .skill:not(:last-child) {
-    margin-bottom: -0.75rem;
-  }
+.skill ~ br {
+    display: none;
+}
